  01 Sep 2016; Manuel Friedli <manuel@fritteli.ch> punjab-0.15.ebuild,
  punjab-9999.ebuild:
  net-im/punjab:  updated to EAPI="6"

  07 Jun 2016; Manuel Friedli <manuel@fritteli.ch> +ChangeLog:
  Added ChangeLog