@@ -1,7 +1,7 @@
 AUX punjab-confd 67 SHA256 2951827630ccbd793922d32f7f61416747c50ebb2cd542062f1dd82dc9ec94c7 SHA512 9784f2b70cc5830b44702ad74d5b18475fb081f5728ac346746b3f347a9a33771680752a29e42e13b9d2ce7eb983babe22486945b2be22dbfbff6078e8a837ba WHIRLPOOL cb64ecbcd7710d0a6f33ece9bb851a829a6e8c1a978235f7e96f882d69b63ab172a69e4c04c38adc07758fcf39fa0ebebf8f3a40821d7295746378d91d3f98dc
 AUX punjab-initd 622 SHA256 f6142a10931321d1627ced397e53251b7ce05a1f24e61c73d7a6ae2cdbe652fa SHA512 da206f1586373338049e176d72beb87d3ae4867f37f692a1ed6d2e2beefbe0526da668d3f0112c6097bbe0f97067011c90731ef020563e1d0d842d8f533c5d14 WHIRLPOOL 5633baaf101bb0524b913902acf7db9c89828dd2a04b773d521f214022828d4498467f718294d3be242d1ab543a3a7bbf8d7d75bfa8979ad03ec0343b9f3379e
 DIST punjab-0.15.tar.gz 44056 SHA256 96fd69d77477f967f25c0d6a0af5a628d522e6df11dbb6a16e84bf357db18e76 SHA512 7651cade4e8caea700dd8cccff6459b0b3593003466056c961e95261f33d533e767ff923d81685170b8c6ce1623147723b98c25210a427a016df8cb9fec09dfd WHIRLPOOL 1497a41540715c41e5407200c29c2067222526e1d0148bfd355930bc5f5f89f7080c2d67d8f63558542f770401d058f6b08062e4fc032a5bbe5e5dc5a4ea0121
-EBUILD punjab-0.15.ebuild 1294 SHA256 b92c82909cadbaa1683e57b8f32db251dc6158cbad80c07bc4565fc6caab3196 SHA512 e8e19121c9fe2105d8c5aad4f0b2fed14f09b9c947271f1420c48067f1924949b3fee34d360557040291d4d0e6ee641ea01451b7458a7ef7a9276cde9123fb4b WHIRLPOOL 4d6d923647a66c4ac667baa3280dd7b8c3b53b50811abb624a8f29e01539c77dbf904dd0214400722d034bb5337149538235aec2376b15579378df99d946063d
-EBUILD punjab-9999.ebuild 1268 SHA256 34c28aabf3b4e17d1e77b5b293b15484adfb38f2da0cbf2b420afda98f1e1884 SHA512 e73c9ad4b9b4d4f199a606f2b78f2e8c8974e5f7bebdb51e3e99f05e58f5448c544d6b05878aae0c72bf9162e68dbe1bfe0644789b5a5fcab37bb78b2684d470 WHIRLPOOL 4d2d8d3dd250b8bc053f43dcc58a0c43447f8ac55371b37876f45630c3ec9e0776641778e424cc272e418df1b174f753a7adc7cf1bc7f9c082a30a7957b9b252
-MISC ChangeLog 213 SHA256 0124502f905a482eb5621b73fabb7c342b8d48ce90352bfb58eac189c92e5ce5 SHA512 25071be9a47975b6f15ea67fc06e60a42261febcbd3c5b24cadeeb544627bb1cc9d20b9ccf6b0c45f9017fe81ebae9ba1d1a0893c98886e1c29f202e969e9de9 WHIRLPOOL bd04500c24ea8f88754c7e009c118cb31248a0ce7d11132703f7daaf687f62594b6faf39e395834f4d9118adea257dcd69ac3ed7cf93f22362a1d5c5943ba3a3
+EBUILD punjab-0.15.ebuild 1157 SHA256 712de06eb9f080c3a5c2ee6d859616d828d26e7d174373d14a80192fbbc73b14 SHA512 5125cc8c1b1948e93edc2afbaaff55db1dcc7c244399dfc9a93f47208ac9a1cb8f99d52a6f408487c903c1959c1edd74b6e42253bcd030d336bda9df923cfe80 WHIRLPOOL 87eb5aef08db9725dd85a7dae65946e86bf9c5359dd4dbcb5c6a854e2f92f4a8031d6be3a1bc3326c10317cc297a96a35f119b4924ffd601606be5808d1587b9
+EBUILD punjab-9999.ebuild 1268 SHA256 1d63075e7153984f71a6d8c816e88f1856cfe1d281577c07d0c58bced9af32dc SHA512 6dba352114fe9046bd19f2a67d1ec29ca71cf7028828c021f9eb9433738841d2e42c2baf50ae075fac55e08feb64e84b9909e1c723def28f1fa8347c73e1dc2d WHIRLPOOL 99a148d15a16731a871f38b1783c5a0419d2514f76b39e6872215f849229b91b6da5f3e7fc6d997f300ab87b163f8c3b9ef9a0a203d8c8775ea19360bf80ec68
+MISC ChangeLog 359 SHA256 1e242a07e4bfce20fa6697c19fe3822519a195537daf2b81c4507d488d58e9c9 SHA512 f0205551c3c5a471c901350cb155ee27f3a16c69fde8715e95cbf7c7b796db456efe4168fee24441958db948ea8976593134b0e7b63f4d1f17dea3d5dde64752 WHIRLPOOL f593468141c13bfd43945110c1d59016cbe78fd4324bb2eb897e00615bb4c68b2acdcead0c181df6a4ff3b525c7cf90342de233f77e720e836c4af03f9b73875
 MISC metadata.xml 307 SHA256 c5de1524b4a2f44a68113ee604c2e4917a13f6d3689fe4b3a5b54f0037a083de SHA512 22f5442878e7b227d7ba0cb7393865818474086e26ed8e835903f64af8b9c72c524640a8c4ced599a7181e4f3b4195ce84d026729ad22908832b5a9f31697e4e WHIRLPOOL c759749f423ad411f0f2d2f3fa82b395369c58a6da3aa8efc90831a9238758c4f70d2003cd81512fbbe797b02817cc26ebae76eb917610354ec6f197f139dd17
